processor/deploymentconfig.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: processor
  name: processor
  namespace: <PROJECT>
spec:
  replicas: 1
  selector:
    deploymentconfig: processor
  strategy:
    activeDeadlineSeconds: 21600
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      labels:
        app: processor
        deploymentconfig: processor
    spec:
      containers:
      - image: <CONTAINER>
        imagePullPolicy: Always
        name: processor
        ports:
        - containerPort: 8080
          protocol: TCP
  test: false
  triggers:
  - imageChangeParams:
      automatic: true
      containerNames:
      - processor
      from:
        kind: ImageStreamTag
        name: processor:latest
        namespace: calculator
    type: ImageChange
  - type: ConfigChange
