processor/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: processor
  name: processor
  namespace: <PROJECT>
spec:
  host: <DOMAIN>
  path: /processor/calculate
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: processor
    weight: 100
  wildcardPolicy: None
